syntax="proto3";

service merge {
    rpc TestMerge(TestMergeReq) returns (TestMergeRes){}
}


message TestMergeReq{
    int64 number1 = 1;
    int64 number2 = 2;
}

message TestMergeRes{
    int64 number = 1;
}